Improvements html tags for SEO

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,7 +5,7 @@
 
       <div class="card-image card-image-blog p-0">
         {{ if .Params.image }}
-        <img src="{{ .Params.image }}" alt="{{ .Title }}" class="card-img-top img-fluid " />
+        <img src="{{ .Params.image }}" alt="{{ .Title }}" class="card-img-top img-fluid">
         {{ end }}
         {{ if .Params.video }}
         <video loop autoplay muted playsinline class="img-title">
