--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -22,10 +22,9 @@
   {{- $.Scratch.Set "Description" ( .Description | default .Params.subtitle | default .Summary ) }}
   {{- $.Scratch.Set "Title" ( .Title | default .Site.Title ) }}
 {{- end }}
-
-<meta charset="utf-8" />
+<meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <!-- Site Title, Description, Author, and Favicon -->
 {{ if .IsHome }}
 <title>{{ $.Site.Title }}</title>
@@ -34,14 +33,14 @@
 {{ end }}
 {{- else }}
 {{- with ($.Scratch.Get "Title") }}
-  <title>{{ . }} - {{ $.Site.Title }}</title>
+<title>{{ . }} - {{ $.Site.Title }}</title>
 {{- end }}
 {{- with ($.Scratch.Get "Description") }}
-  <meta name="description" content="{{ . }}">
+<meta name="description" content="{{ . }}">
 {{- end }}
 {{ end }}
 {{- with .Site.Author.name }}
-  <meta name="author" content="{{ . }}"/>
+<meta name="author" content="{{ . }}">
 {{- end }}
 {{- partial "seo/main.html" . }}   
 <link rel="apple-touch-icon" sizes="180x180" href=" {{ "favicon/apple-touch-icon.png" | absURL }}">
@@ -53,21 +52,21 @@
 
 <!-- Links and stylesheets -->
 {{- if .Site.Params.selfHosted -}}
-<link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}" />
-<link rel="stylesheet" href="{{ "css/bootstrap-icons/bootstrap-icons.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
+<link rel="stylesheet" href="{{ "css/bootstrap-icons/bootstrap-icons.css" | absURL }}">
 {{- else -}}
 <link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 {{- end }}
-<link rel="stylesheet" href="{{ "css/main.css" | absURL }}" />
-<link disabled id="dark-mode-theme" rel="stylesheet" href="{{ "css/dark.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
+<link disabled id="dark-mode-theme" rel="stylesheet" href="{{ "css/dark.css" | absURL }}">
 
 {{- if .Site.Params.useHLJS }}
-<link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}">
 {{- else -}}
-<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}">
 {{- end -}}
-<link rel="stylesheet" href="{{ "css/codeblock.css" | absURL }}" />
+<link rel="stylesheet" href="{{ "css/codeblock.css" | absURL }}">
 {{- partial "head_custom.html" . }}
 {{ template "_default/google_analytics_async.html" . }}
