--- a/layouts/index.html
+++ b/layouts/index.html
@@ -25,15 +25,12 @@
   <div class="row font-sans">
     <div class="col-md-12 mt-10">
       <nav aria-label="Page navigation">
-        <ul class="pagination justify-content-end">
+        <div class="pagination justify-content-end">
           {{ template "_internal/pagination.html" . }}
-        </ul>
+        </div>
       </nav>
     </div>
   </div>
-</div>
-
-</div>
 </div>
 
 {{ end }}
