--- a/static/css/dark.css
+++ b/static/css/dark.css
@@ -10,6 +10,7 @@ body {
 }
 img,
 video,
+iframe,
 body * [style*="background-image"] {
   filter: hue-rotate(180deg) contrast(100%) invert(100%);
   -webkit-filter: hue-rotate(180deg) contrast(100%) invert(100%);
