arrow icon added in the read more div.

--- a/layouts/partials/post_preview.html
+++ b/layouts/partials/post_preview.html
@@ -25,7 +25,7 @@
                 </div>
 
                 <div class="read-more-section">
-                    <h6>Read more</h6>
+                    <h6>Read more <i class="bi bi-arrow-right"></i></h6>
                 </div>
             </div>
 
