--- a/static/css/main.css
+++ b/static/css/main.css
@@ -68,6 +68,12 @@ hr.small {
   border-radius: 3px;
 }
 
+figcaption p {
+  font-size: 16px;
+  text-align: center;
+  color: rgba(33, 37, 41, 0.75);
+}
+
 .main-content {
   padding-top: 80px;
 }
