--- a/layouts/partials/post_preview_top_img_cards.html
+++ b/layouts/partials/post_preview_top_img_cards.html
@@ -2,7 +2,16 @@
     <a href="{{ .Permalink }}" aria-label="Link to the blog">
         <div class="card single-post-card h-100 shadow-custom ">
             {{ if .Params.image }}
-            <img src="{{ .Params.image }}" alt="{{ .Title }}" class="card-img-top img-fluid lazyload" />
+                {{ with resources.Get .Params.image }}
+                {{ with .Err }}
+                {{ warnf "%s" . }}
+                {{ else }}
+
+                <img src="{{ ( .Resize " 400x" ).RelPermalink }}" alt="{{ .Title }}"
+                    class="card-img-top img-fluid lazyload">
+                {{ end }}
+
+                {{ end }}
             {{ end }}
             {{ if .Params.video }}
             <video loop autoplay muted playsinline class="img-title">
