bootstrap updated to 5.3. Design and code improvements.

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -10,7 +10,7 @@
       {{ end }} 
       <div class="row">
         {{ range .Paginator.Pages }}
-          {{ partial "post_preview.html" .}}
+          {{ partial "post_preview_bottom_card.html" .}}
         {{ end }}
       </div>
     </div>
