--- a/layouts/partials/post_preview_notes.html
+++ b/layouts/partials/post_preview_notes.html
@@ -1,9 +1,10 @@
 <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10">
-    <div class="card mb-3 ">
+    <!-- <div class="card mb-3 "> -->
+        <div class="card border mb-3 "> 
         <div class="card-body">
             <div class="row">
                 <div class="col-md-10">
-                    <h3 class="post-title">{{ .Title }}</h3>
+                    <h3 class="fw-bold post-title">{{ .Title }}</h3>
                 </div>
                 <div class="col-md-2 d-flex justify-content-end">
                     <a href="{{ .Permalink }}">
