--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -52,11 +52,11 @@
 
 <!-- Links and stylesheets -->
 {{- if .Site.Params.selfHosted -}}
-<link rel="stylesheet" href="{{ "css/bootstrap.min.css" | absURL }}">
-<link rel="stylesheet" href="{{ "css/bootstrap-icons/bootstrap-icons.css" | absURL }}">
+<link rel="stylesheet" href="{{ "vendor/bootstrap/css/bootstrap.min.css" | absURL }}">
+<link rel="stylesheet" href="{{ "vendor/bootstrap-icons/bootstrap-icons.css" | absURL }}">
 {{- else -}}
 <link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 {{- end }}
 <link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
