--- a/layouts/partials/post_preview_top_img_cards.html
+++ b/layouts/partials/post_preview_top_img_cards.html
@@ -1,17 +1,17 @@
 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6 mb-4">
-    <a href="{{ .Permalink }}" aria-label="Link to the blog">
-        <div class="card single-post-card h-100 shadow-custom ">
+    <a href="{{ .Permalink }}" alt="Link to {{ .Title }}">
+        <div class="card single-post-card h-100 shadow-effect border">
             {{ if .Params.image }}
-                {{ with resources.Get .Params.image }}
-                {{ with .Err }}
-                {{ warnf "%s" . }}
-                {{ else }}
+            {{ with resources.Get .Params.image }}
+            {{ with .Err }}
+            {{ warnf "%s" . }}
+            {{ else }}
 
-                <img src="{{ ( .Resize " 400x" ).RelPermalink }}" alt="{{ .Title }}"
-                    class="card-img-top img-fluid lazyload">
-                {{ end }}
+            <img src="{{ ( .Resize " 500x" ).RelPermalink }}" alt="{{ .Title }}"
+                class="card-img-top img-fluid lazyload">
+            {{ end }}
 
-                {{ end }}
+            {{ end }}
             {{ end }}
             {{ if .Params.video }}
             <video loop autoplay muted playsinline class="img-title">
@@ -20,7 +20,7 @@
             {{ end }}
             <div class="card-body">
 
-                <h3 class="post-title">{{ .Title }}</h3>
+                <h3 class="fw-bold post-title">{{ .Title }}</h3>
                 {{ if .Params.subtitle }}
                 <h3 class="post-subtitle">
                     {{ .Params.subtitle }}
@@ -42,7 +42,8 @@
                 </div>
 
                 <div class="read-more-section">
-                    <h6>Read more <i class="bi bi-arrow-right"></i></h6>
+                    <h6><a href="{{ .Permalink }}" class="text-muted link-underline" alt="Link to {{ .Title }}">Read more <i
+                        class="bi bi-arrow-right"></i></a> </h6>
                 </div>
             </div>
 
