Make sure "Read more" string is consistently translated

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -68,7 +68,7 @@
             </div>
           </div>
 
-         
+
           <div class="col-md-10">
             <div class="card-body p-1.1">
               <p class="p-0 m-0"><small class="text-muted">Written By</small></p>
@@ -80,7 +80,7 @@
                 {{ .Site.Author.name | safeHTML }}
                 {{ end }}
 
-              </p> 
+              </p>
               {{ if .Site.Params.authorInfo }}
               <p class="card-text fs-6  m-0">{{ .Site.Params.authorInfo | safeHTML }}</p>
               {{ end }}
@@ -124,7 +124,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 col-md-12 mt-3">
-        <h3>Read more</h3>
+        <h3>{{ i18n "readMore" }}</h3>
         <hr />
       </div>
 
