--- a/layouts/partials/post_preview_bottom_card.html
+++ b/layouts/partials/post_preview_bottom_card.html
@@ -26,8 +26,8 @@
 
                 <div class="read-more-section">
                     <!-- post-read-more  -->
-                    <h6><a href="{{ .Permalink }}" class="text-muted link-underline" alt="Link to {{ .Title }}">Read
-                            more <i class="bi bi-arrow-right"></i></a> </h6>
+                    <h6><a href="{{ .Permalink }}" class="text-muted link-underline" alt="Link to {{ .Title }}">{{ i18n "readMore" }}
+                            <i class="bi bi-arrow-right"></i></a> </h6>
                 </div>
             </div>
 
