--- a/layouts/partials/post_preview_list.html
+++ b/layouts/partials/post_preview_list.html
@@ -22,7 +22,7 @@
                     {{ end }}
                 </div>
                 <div class="read-more-section">
-                    <h6><a href="{{ .Permalink }}" class="text-muted link-underline" alt="Link to {{ .Title }}">Read more <i
+                    <h6><a href="{{ .Permalink }}" class="text-muted link-underline" alt="Link to {{ .Title }}">{{ i18n "readMore" }} <i
                         class="bi bi-arrow-right"></i></a> </h6>
                 </div>
             </div>
