Use .Summary as fallback in post previews

--- a/layouts/partials/post_preview_imgless_card.html
+++ b/layouts/partials/post_preview_imgless_card.html
@@ -20,7 +20,7 @@
                     {{ .Description }}
 
                     {{ else }}
-                    {{ .Content }}
+                    {{ .Summary }}
                     {{ end }}
                 </div>
                 <div class="read-more-section">
@@ -31,4 +31,4 @@
         </a>
         </a>
     </div>
-</div> 
+</div>
