--- a/layouts/partials/post_preview_list.html
+++ b/layouts/partials/post_preview_list.html
@@ -18,7 +18,7 @@
                     {{ .Description }}
 
                     {{ else }}
-                    {{ .Content }}
+                    {{ .Summary }}
                     {{ end }}
                 </div>
                 <div class="read-more-section">
