--- a/layouts/partials/post_preview_bottom_card.html
+++ b/layouts/partials/post_preview_bottom_card.html
@@ -20,7 +20,7 @@
                     {{ .Description }}
 
                     {{ else }}
-                    {{ .Content }}
+                    {{ .Summary }}
                     {{ end }}
                 </div>
 
