Respect lastmod parameter, don't display modification time if disabled

--- a/layouts/partials/post_meta_notes.html
+++ b/layouts/partials/post_meta_notes.html
@@ -4,7 +4,7 @@
 
   {{ $datestr }}
 
-  {{ if ne $datestr $lastmodstr }}
+  {{ if and .Site.Params.lastmod (ne $datestr $lastmodstr) }}
   {{ i18n "lastModified" $lastmodstr }}
   {{ end }}
 
