Do not make header fixed on small screens, make sure navigation menu can be scrolled

--- a/layouts/partials/nav.html
+++ b/layouts/partials/nav.html
@@ -1,5 +1,5 @@
 {{ $current := . }}
-<div class="container fixed-top">
+<div class="container fixed-top mw-100">
   <div class="row justify-content-center">
     <div class="col-sm-12 col-md-12 col-lg-10 col-xl-10">
 
