--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -1,3 +1,11 @@
+{{ if .Site.Params.selfHosted }}
+  @import "bootstrap.scss";
+  @import "bootstrap-icons.scss";
+{{ else }}
+  @import url(https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.css);
+  @import url(https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css);
+{{ end }}
+
 /* --- General --- */
 
 body {
@@ -1198,3 +1206,12 @@ ul.share li:hover .fab {
   /* Convert to .bi-sun */
   content: "\f5a2";
 }
+
+{{ if .Site.Params.useHLJS }}
+  @import "highlight.min.scss";
+{{ else }}
+  @import "syntax.scss";
+{{ end }}
+
+@import "codeblock.scss";
+@import "custom.scss";
