--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -53,13 +53,6 @@
 <!-- Links and stylesheets -->
 <link rel="alternate" href="{{ "index.xml" | absLangURL }}" type="application/rss+xml" title="{{ .Site.Title }}">
 <script src="{{ "js/dark-mode.js" | absURL }}"></script>
-{{- if .Site.Params.selfHosted -}}
-<link rel="stylesheet" href="{{ "vendor/bootstrap/css/bootstrap.min.css" | absURL }}">
-<link rel="stylesheet" href="{{ "vendor/bootstrap-icons/bootstrap-icons.css" | absURL }}">
-{{- else -}}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-{{- end }}
 
 {{- if and .Site.Params.lunrSearch -}}
   {{- if .Site.Params.selfHosted -}}
@@ -129,13 +122,10 @@
   <script src="{{ "js/lunr-search.js" | absURL }}" data-index="{{ (resources.Get "json/search.json" | resources.ExecuteAsTemplate "/search.json" ($.GetPage "/")).RelPermalink }}"></script>
 {{- end -}}
 
-<link rel="stylesheet" href="{{ "css/main.css" | absURL }}">
-
-{{- if .Site.Params.useHLJS }}
-<link rel="stylesheet" href="{{ "css/highlight.min.css" | absURL }}">
-{{- else -}}
-<link rel="stylesheet" href="{{ "css/syntax.css" | absURL }}">
+{{- $options := dict "includePaths" (slice "static/vendor/bootstrap/css" "static/vendor/bootstrap-icons") -}}
+{{- with resources.Get "css/main.scss" | resources.ExecuteAsTemplate "style.scss" . | toCSS $options | minify -}}
+<link rel="stylesheet" href="{{ .RelPermalink }}">
 {{- end -}}
-<link rel="stylesheet" href="{{ "css/codeblock.css" | absURL }}">
+
 {{- partial "head_custom.html" . }}
 {{ template "_default/google_analytics_async.html" . }}
