fixed clicking #tags has extra slash in URL.

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -36,7 +36,7 @@
       {{ if .Params.tags }}
       <div class="blog-tags">
         {{ range .Params.tags }}
-        <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
+        <a href="{{ $.Site.LanguagePrefix | absURL }}tags/{{ . | urlize }}/">{{ . }}</a>
         {{ end }}
       </div>
       {{ end }}
