--- a/layouts/partials/post_preview_notes.html
+++ b/layouts/partials/post_preview_notes.html
@@ -38,7 +38,7 @@
         <div class="card-footer text-muted">
             <div class="blog-tags">
                 {{ range .Params.tags }}
-                <a href="{{ $.Site.LanguagePrefix | absURL }}/tags/{{ . | urlize }}/">{{ . }}</a>
+                <a href="{{ $.Site.LanguagePrefix | absURL }}tags/{{ . | urlize }}/">{{ . }}</a>
                 {{ end }}
             </div>
         </div>
