The font weight for all titles has been updated to medium.

--- a/layouts/partials/post_preview_top_img_cards.html
+++ b/layouts/partials/post_preview_top_img_cards.html
@@ -13,7 +13,7 @@
             {{ end }}
             <div class="card-body">
 
-                <h3 class="fw-bold post-title">{{ .Title }}</h3>
+                <h3 class="fw-medium post-title">{{ .Title }}</h3>
                 {{ if .Params.subtitle }}
                 <h3 class="post-subtitle">
                     {{ .Params.subtitle }}
