--- a/layouts/partials/post_preview_middle_img_cards.html
+++ b/layouts/partials/post_preview_middle_img_cards.html
@@ -2,7 +2,7 @@
     <a href="{{ .Permalink }}">
         <div class="card single-post-card h-100 shadow-effect border">
             <div class="card-body">
-                <h3 class="fw-bold post-title">{{ .Title }}</h3>
+                <h3 class="fw-medium post-title">{{ .Title }}</h3>
                 {{ if .Params.subtitle }}
                 <h3 class="post-subtitle">
                     {{ .Params.subtitle }}
