--- a/layouts/partials/post_preview_notes.html
+++ b/layouts/partials/post_preview_notes.html
@@ -4,7 +4,7 @@
         <div class="card-body">
             <div class="row">
                 <div class="col-md-10">
-                    <h3 class="fw-bold post-title">{{ .Title }}</h3>
+                    <h3 class="fw-medium post-title">{{ .Title }}</h3>
                 </div>
                 <div class="col-md-2 d-flex justify-content-end">
                     <a href="{{ .Permalink }}">
