Added image gallery

--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -129,3 +129,11 @@
 
 {{- partial "head_custom.html" . }}
 {{ template "_default/google_analytics_async.html" . }}
+
+ 
+<!-- GLightbox CSS -->
+<link href="/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
+
+<!-- GLightbox JS -->
+<script  src="{{ "vendor/glightbox/js/glightbox.min.js" | absURL }}"></script>
+ 
