--- a/layouts/shortcodes/info_cards.html
+++ b/layouts/shortcodes/info_cards.html
@@ -2,7 +2,7 @@
 
 <div class="card alert alert-primary">
         {{ with .Get "title" }}
-        <h5 class="card-title">
+        <h5 class="card-title m-0">
             {{ . }}
         </h5>
         {{ end }}
