--- a/layouts/shortcodes/details.html
+++ b/layouts/shortcodes/details.html
@@ -1,3 +1,6 @@
-<details><summary>{{ .Get 0 }}</summary>
+<details>
+<summary>{{ .Get 0 }}</summary>
+<div class="card card-body">
 {{ .Inner }}
+</div>
 </details>
