showPostImage parameter updated

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -2,7 +2,7 @@
 <div class="container" role="main">
   <div class="row">
 
-    {{ if .Site.Params.hidePostImage }}
+    {{ if .Site.Params.showPostImage }}
     <div class="col-lg-8 offset-lg-2 col-md-10 offset-md-1 ">
       <div class="card-image card-image-blog p-0">
         {{ $ := . }}
