--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -137,3 +137,4 @@
 <!-- GLightbox JS -->
 <script  src="{{ "vendor/glightbox/js/glightbox.min.js" | absURL }}"></script>
  
+<link rel="stylesheet" href="/custom.css">
